logs/dag_id=dag/run_id=manual__2022-12-07T19:46:45.034769+00:00/task_id=create_prediction_table/attempt=1.log
[2022-12-07T19:47:28.729+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: dag.create_prediction_table manual__2022-12-07T19:46:45.034769+00:00 [queued]>
[2022-12-07T19:47:28.759+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: dag.create_prediction_table manual__2022-12-07T19:46:45.034769+00:00 [queued]>
[2022-12-07T19:47:28.759+0000] {taskinstance.py:1362} INFO - 
--------------------------------------------------------------------------------
[2022-12-07T19:47:28.760+0000] {taskinstance.py:1363} INFO - Starting attempt 1 of 1
[2022-12-07T19:47:28.761+0000] {taskinstance.py:1364} INFO - 
--------------------------------------------------------------------------------
[2022-12-07T19:47:28.806+0000] {taskinstance.py:1383} INFO - Executing <Task(PostgresOperator): create_prediction_table> on 2022-12-07 19:46:45.034769+00:00
[2022-12-07T19:47:28.885+0000] {standard_task_runner.py:55} INFO - Started process 6902 to run task
[2022-12-07T19:47:28.893+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'dag', 'create_prediction_table', 'manual__2022-12-07T19:46:45.034769+00:00', '--job-id', '1928', '--raw', '--subdir', 'DAGS_FOLDER/dag.py', '--cfg-path', '/tmp/tmp_7mjb5c7']
[2022-12-07T19:47:28.895+0000] {standard_task_runner.py:83} INFO - Job 1928: Subtask create_prediction_table
[2022-12-07T19:47:29.081+0000] {task_command.py:376} INFO - Running <TaskInstance: dag.create_prediction_table manual__2022-12-07T19:46:45.034769+00:00 [running]> on host a9d6893ff63e
[2022-12-07T19:47:29.242+0000] {taskinstance.py:1592} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=lofitravel
AIRFLOW_CTX_DAG_ID=dag
AIRFLOW_CTX_TASK_ID=create_prediction_table
AIRFLOW_CTX_EXECUTION_DATE=2022-12-07T19:46:45.034769+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2022-12-07T19:46:45.034769+00:00
[2022-12-07T19:47:29.269+0000] {base.py:71} INFO - Using connection ID 'postgres_localhost' for task execution.
[2022-12-07T19:47:29.287+0000] {sql.py:315} INFO - Running statement: 
        CREATE TABLE IF NOT EXISTS prediction_table(
            date TIMESTAMP NOT NULL,
            ticker_from VARCHAR(3) NOT NULL,
            ticker_to VARCHAR(3) NOT NULL,
            amount FLOAT NOT NULL,
        PRIMARY KEY (date, ticker_from, ticker_to)
        , parameters: None
[2022-12-07T19:47:29.291+0000] {taskinstance.py:1851} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 94, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 295, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 320, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at end of input
LINE 8:         
                ^

[2022-12-07T19:47:29.322+0000] {taskinstance.py:1406} INFO - Marking task as FAILED. dag_id=dag, task_id=create_prediction_table, execution_date=20221207T194645, start_date=20221207T194728, end_date=20221207T194729
[2022-12-07T19:47:29.360+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 1928 for task create_prediction_table (syntax error at end of input
LINE 8:         
                ^
; 6902)
[2022-12-07T19:47:29.390+0000] {local_task_job.py:159} INFO - Task exited with return code 1
[2022-12-07T19:47:29.439+0000] {taskinstance.py:2623} INFO - 0 downstream tasks scheduled from follow-on schedule check
